suggestions component update

--- a/src/App/WorkPanels/MainInspectorPanel/Components/TabNewRecord/NewRecordForm/ExitObject/ExitObject.css
+++ b/src/App/WorkPanels/MainInspectorPanel/Components/TabNewRecord/NewRecordForm/ExitObject/ExitObject.css
@@ -1,11 +1,11 @@
-.react-dadata__container {
+.suggestions-container {
     position: relative !important;
     flex: 1 1 auto !important;
     width: 1% !important;
     margin-bottom: 0 !important;
 }
 
-.react-dadata__input {
+.suggestions-input {
     height: calc(1.5em + .75rem + 2px) !important;
     padding: .375rem .75rem !important;
     font-size: 1rem !important;
@@ -13,22 +13,48 @@
     border-radius: .25rem !important;
 }
 
-.react-dadata__input:focus {
+.suggestions-input:focus {
     color:#495057 !important;
     background-color:#fff !important;
     border-color:#80bdff !important;
     outline: 0 !important;
     box-shadow: 0 0 0 .2rem rgba(0,123,255,.25) !important;
 }
-  
-.react-dadata__suggestion--current {
-    background-color: #e7f1ff !important;
+
+.suggestions-wrapper {
+    position: absolute !important;
+    z-index: 10 !important;
+    background-color:#fff !important;
+    box-shadow: 0 1px 6px 3px rgba(0,0,0,.1) !important;
+    top: 100% !important;
+    left: 0 !important;
+    right: 0 !important;
 }
-  
-.react-dadata__suggestion:hover {
+
+.suggestions-hint {
+    font-size: 14px !important;
+    color: #828282 !important;
+    padding: 10px 10px 5px !important;
+}
+
+.suggestions-suggestion {
+    font-size: 15px !important;
+    padding: 7px 10px !important;
+    cursor: pointer !important;
+}
+
+.suggestions-suggestion:hover {
     background-color: #f0f8ff !important;
 }
-    
-.react-dadata--highlighted {
+
+.suggestions-selected {
+    background-color: #e7f1ff !important;
+}
+
+.suggestions-highlighting {
     color: #1c7ae5 !important;
+}
+
+mark {
+    background-color: #e3f1fc !important;
 }
